added center box

--- a/style.css
+++ b/style.css
@@ -20,8 +20,23 @@ body {
   align-items: center;
   padding: 20px;
   color: white;
+  margin: 0px;
 }
 
 .calc {
   font-size: medium;
+}
+
+.center {
+  background-color: #192734;
+  border-radius: 12px;
+  margin: 300px;
+  /* padding-top: 200px;
+  padding-bottom: 200px; */
+  /* text-align: center; */
+  font-family: "inter";
+  color: white;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
 }
